메뉴부분  progress bar 만들기

--- a/SNS-Profile/index.html
+++ b/SNS-Profile/index.html
@@ -1,48 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SNS Profile</title>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
+  </head>
+  <body>
     <div class="profile-container">
+      <!-- HEADER -->
+      <header class="profile-header profile-white-bg">
+        <img
+          class="profile-img mt-s"
+          src="vivivz-eunha.png"
+          alt="비비지 은하"
+        />
 
-        <div class="profile-header profile-white-bg">
-            <img class="profile-img mt-s" src="vivivz-eunha.png" alt="비비지 은하">
-            
-            <div class="profile-introduce mg-lg">
-                <h1 class="bold profile-name mb-s">VIVIZ EUNHA</h1>
-                <p>걸그룹 비비지 멤버</p>
-                <div class="font-color-sky mb-m">
-                    <i class="fa-solid fa-location-dot"></i>
-                    <span class="">서울특별시 금천구</span>
-                </div>
-                <button class="btn btn-sky">Contact</button>
-            </div>
-
-            <div class="dividing-line"></div>
-
-            <div class="profile-introduce-detail bold mg-lg">
-                <p>Location</p>
-                <p>Age</p>
-                <p>Experience</p>
-                <p>School</p>
-            </div>
-
-            <div class="profile-introduce-detail mg-lg">
-                <p>서울 금천구</p>
-                <p>97년생</p>
-                <p>2022.02.09 재데뷔</p>
-                <p>서울공연예고</p>
-            </div>
-
+        <div class="profile-introduce mg-lg">
+          <h1 class="bold profile-name mb-s">VIVIZ EUNHA</h1>
+          <p>걸그룹 비비지 멤버</p>
+          <div class="font-color-sky mb-m">
+            <i class="fa-solid fa-location-dot"></i>
+            <span class="">서울특별시 금천구</span>
+          </div>
+          <button class="btn btn-sky">Contact</button>
         </div>
 
+        <div class="dividing-line"></div>
+
+        <div class="profile-introduce-detail bold mg-lg">
+          <p>Location</p>
+          <p>Age</p>
+          <p>Experience</p>
+          <p>School</p>
+        </div>
+
+        <div class="profile-introduce-detail mg-lg">
+          <p>서울 금천구</p>
+          <p>97년생</p>
+          <p>2022.02.09 재데뷔</p>
+          <p>서울공연예고</p>
+        </div>
+      </header>
+
+      <!-- PROFILE BAR -->
+      <nav class="profile-bar-container">
+        <ul class="profile-bar-title">
+          <li class="font-color-sky bold pd-lg">Profile</li>
+        </ul>
+
+        <div class="profile-bar-progress">
+          <div class="profile-bar-progress degree-of-progress"></div>
+        </div>
+      </nav>
+
+      <!-- PROFILE SECTION -->
+      <section></section>
     </div>
-</body>
+  </body>
 </html>
