pc화면 디자인&레이아웃  1차  완성

--- a/SNS-Profile/index.html
+++ b/SNS-Profile/index.html
@@ -22,7 +22,6 @@
           src="vivivz-eunha.png"
           alt="비비지 은하"
         />
-
         <div class="profile-introduce mg-lg">
           <h1 class="bold profile-name mb-s">VIVIZ EUNHA</h1>
           <p>걸그룹 비비지 멤버</p>
@@ -62,7 +61,86 @@
       </nav>
 
       <!-- PROFILE SECTION -->
-      <section></section>
+      <section class="profile-section-container">
+        <div class="profile-section profile-side-left profile-white-bg mt-lg">
+          <h2 class="title-text">WORKS</h2>
+          <p class="text">과거 6인조 걸그룹 여자친구 멤버</p>
+          <p class="text">여자친구 그룹 내 리드보컬</p>
+        </div>
+
+        <div class="profile-section profile-side-mid profile-white-bg mt-lg">
+          <h2 class="title-text">ABOUT</h2>
+          <p class="text">
+            공식 포지션은 리드보컬, 메인보컬인 유주와 함께 보컬 라인을 담당하고
+            있다.
+          </p>
+          <p class="mb-lg text">
+            메인댄서 신비처럼 깔끔한 춤보다는 리드댄서인 예린처럼 알맹이 진 춤을
+            선보인다.
+          </p>
+          <div class="profile-bar-progress"></div>
+          <h2 class="title-text">Nickname</h2>
+          <div class="profile-badge-container">
+            <p class="badge">터진 크림빵</p>
+            <p class="badge">으나</p>
+            <p class="badge">짜냥이</p>
+            <p class="badge">응비</p>
+            <p class="badge">큰은비</p>
+          </div>
+        </div>
+
+        <div class="profile-section profile-side-right">
+          <!-- side-right-top -->
+          <div class="profile-white-bg mt-lg font-align">
+            <i
+              class="fire-icon fa-solid fa-fire-flame-simple font-color-sky txt-xl"
+            ></i>
+            <p class="mt-lg mb-lg">Fine me at Linkedout.com</p>
+            <button class="btn btn-sky mb-m">Sign Up</button>
+            <p class="font-color-sky">Already a member?</p>
+          </div>
+
+          <!-- side-right-bottom -->
+          <div>
+            <h3 class="mt-lg mb-m bold">People You Might Know</h3>
+            <div class="profile-bar-progress"></div>
+
+            <!-- people mini profile -->
+            <div class="profile-mini mt-lg">
+              <img
+                class="profile-img mt-s"
+                src="vivivz-eunha.png"
+                alt="비비지 은하"
+              />
+              <div class="profile-introduce mg-lg">
+                <h1 class="bold profile-name mb-s">VIVIZ EUNHA</h1>
+                <p class="mb-s">걸그룹 비비지 멤버</p>
+                <div class="font-color-sky mb-s">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <span class="">서울특별시 금천구</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="profile-mini">
+              <img
+                class="profile-img mt-s"
+                src="vivivz-eunha.png"
+                alt="비비지 은하"
+              />
+              <div class="profile-introduce mg-lg">
+                <h1 class="bold profile-name mb-s">VIVIZ EUNHA</h1>
+                <p class="mb-s">걸그룹 비비지 멤버</p>
+                <div class="font-color-sky mb-s">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <span class="">서울특별시 금천구</span>
+                </div>
+              </div>
+            </div>
+            <!-- -->
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
