태블릿 사이즈 모바일 반응형 만들기 - 섹션 만드는 중

--- a/SNS-Profile/index.html
+++ b/SNS-Profile/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/mediaQuery.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -17,6 +18,7 @@
     <div class="profile-container">
       <!-- HEADER -->
       <header class="profile-header profile-white-bg">
+        
         <img
           class="profile-img mt-s"
           src="vivivz-eunha.png"
@@ -79,7 +81,7 @@
             선보인다.
           </p>
           <div class="profile-bar-progress"></div>
-          <h2 class="title-text">Nickname</h2>
+          <h2 class="title-text">NICKNAME</h2>
           <div class="profile-badge-container">
             <p class="badge">터진 크림빵</p>
             <p class="badge">으나</p>
@@ -108,11 +110,11 @@
             <!-- people mini profile -->
             <div class="profile-mini mt-lg">
               <img
-                class="profile-img mt-s"
+                class="profile-img-mini mt-s"
                 src="vivivz-eunha.png"
                 alt="비비지 은하"
               />
-              <div class="profile-introduce mg-lg">
+              <div class="profile-introduce-mini mg-lg">
                 <h1 class="bold profile-name mb-s">VIVIZ EUNHA</h1>
                 <p class="mb-s">걸그룹 비비지 멤버</p>
                 <div class="font-color-sky mb-s">
@@ -124,11 +126,11 @@
 
             <div class="profile-mini">
               <img
-                class="profile-img mt-s"
+                class="profile-img-mini mt-s"
                 src="vivivz-eunha.png"
                 alt="비비지 은하"
               />
-              <div class="profile-introduce mg-lg">
+              <div class="profile-introduce-mini mg-lg">
                 <h1 class="bold profile-name mb-s">VIVIZ EUNHA</h1>
                 <p class="mb-s">걸그룹 비비지 멤버</p>
                 <div class="font-color-sky mb-s">
