태블릿 사이즈 반응형 1차 완성

--- a/SNS-Profile/index.html
+++ b/SNS-Profile/index.html
@@ -81,7 +81,7 @@
             선보인다.
           </p>
           <div class="profile-bar-progress"></div>
-          <h2 class="title-text">NICKNAME</h2>
+          <h2 class="title-text" data-title="nickname" >NICKNAME</h2>
           <div class="profile-badge-container">
             <p class="badge">터진 크림빵</p>
             <p class="badge">으나</p>
@@ -93,7 +93,7 @@
 
         <div class="profile-section profile-side-right">
           <!-- side-right-top -->
-          <div class="profile-white-bg mt-lg font-align">
+          <div class="profile-find-me profile-white-bg mt-lg font-align">
             <i
               class="fire-icon fa-solid fa-fire-flame-simple font-color-sky txt-xl"
             ></i>
@@ -103,7 +103,7 @@
           </div>
 
           <!-- side-right-bottom -->
-          <div>
+          <div class="side-right-bottom">
             <h3 class="mt-lg mb-m bold">People You Might Know</h3>
             <div class="profile-bar-progress"></div>
 
