--- a/Admin-page/index.html
+++ b/Admin-page/index.html
@@ -17,6 +17,7 @@
         <i class="fa-solid fa-flag"></i>
         <i class="fa-solid fa-chart-pie"></i>
       </nav>
+
       <header>
         <div class="main-header-search">
           <input type="text" placeholder="Search" />
@@ -39,6 +40,55 @@
           </div>
         </div>
       </header>
+      <main class="main-dashboard">
+        <h1>Dashboard</h1>
+        <div class="dashboard-card-container">
+          <div class="card">
+            <div class="card-box">
+              <div>
+                <h2>Earnings(Monthly)</h2>
+                <p>$400,000</p>
+              </div>
+              <div class="card-icon">
+                <i class="fa-solid fa-calendar"></i>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-box">
+              <div>
+                <h2>Earnings(Annual)</h2>
+                <p>$800,000</p>
+              </div>
+              <div class="card-icon">
+                <i class="fa-solid fa-dollar-sign"></i>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-box">
+              <div>
+                <h2>Tasks</h2>
+                <p>13</p>
+              </div>
+              <div class="card-icon">
+                <i class="fa-solid fa-list-check"></i>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-box">
+              <div>
+                <h2>Requests</h2>
+                <p>26</p>
+              </div>
+              <div class="card-icon">
+                <i class="fa-solid fa-comments"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </main>
     </div>
   </body>
 </html>
