Fix Admin-page Dashboard-card section PC size

--- a/Admin-page/index.html
+++ b/Admin-page/index.html
@@ -44,8 +44,8 @@
         <h1>Dashboard</h1>
         <div class="dashboard-card-container">
           <div class="card">
-            <div class="card-box">
-              <div>
+            <div class="card-content">
+              <div class="card-text">
                 <h2>Earnings(Monthly)</h2>
                 <p>$400,000</p>
               </div>
@@ -55,8 +55,8 @@
             </div>
           </div>
           <div class="card">
-            <div class="card-box">
-              <div>
+            <div class="card-content">
+              <div class="card-text">
                 <h2>Earnings(Annual)</h2>
                 <p>$800,000</p>
               </div>
@@ -66,8 +66,8 @@
             </div>
           </div>
           <div class="card">
-            <div class="card-box">
-              <div>
+            <div class="card-content">
+              <div class="card-text">
                 <h2>Tasks</h2>
                 <p>13</p>
               </div>
@@ -77,8 +77,8 @@
             </div>
           </div>
           <div class="card">
-            <div class="card-box">
-              <div>
+            <div class="card-content">
+              <div class="card-text">
                 <h2>Requests</h2>
                 <p>26</p>
               </div>
@@ -89,6 +89,8 @@
           </div>
         </div>
       </main>
+
+      <section></section>
     </div>
   </body>
 </html>
