Fix Admin-page Dashboard PC transition

--- a/Admin-page/index.html
+++ b/Admin-page/index.html
@@ -12,10 +12,24 @@
   <body>
     <div class="main-container">
       <nav class="main-nav">
-        <i class="fa-solid fa-house"></i>
-        <i class="fa-solid fa-headphones-simple"></i>
-        <i class="fa-solid fa-flag"></i>
-        <i class="fa-solid fa-chart-pie"></i>
+        <ul>
+          <li>
+            <i class="fa-solid fa-house"></i>
+            Home
+          </li>
+          <li>
+            <i class="fa-solid fa-headphones-simple"></i>
+            Services
+          </li>
+          <li>
+            <i class="fa-solid fa-flag"></i>
+            Alerts
+          </li>
+          <li>
+            <i class="fa-solid fa-chart-pie"></i>
+            Stats
+          </li>
+        </ul>
       </nav>
 
       <header>
@@ -107,12 +121,12 @@
             <div class="badge-blue">14</div>
           </div>
           <div class="task">
-            <p>Borrowed Items</p>
-            <div class="badge-blue">14</div>
+            <p>Trello requests</p>
+            <div class="badge-blue">2</div>
           </div>
           <div class="task">
-            <p>Borrowed Items</p>
-            <div class="badge-blue">14</div>
+            <p>Marked Comments</p>
+            <div class="badge-blue">1</div>
           </div>
         </div>
       </section>
