Create Admin-page Dashboard Responsive Mobile Size

--- a/Admin-page/index.html
+++ b/Admin-page/index.html
@@ -33,6 +33,9 @@
       </nav>
 
       <header>
+        <div class="main-mobile-menu">
+          <i class="fa-solid fa-bars"></i>
+        </div>
         <div class="main-header-search">
           <input type="text" placeholder="Search" />
           <button><i class="fa-solid fa-magnifying-glass"></i></button>
