--- a/starbucks-clone/index.html
+++ b/starbucks-clone/index.html
@@ -61,7 +61,43 @@
         <div class="cards card1"><img src="./img/WIP8gI_20220412094134198.png" alt="" /></div>
         <div class="cards card2"><img src="./img/1R97kl_20220429161554431.png" alt="" /></div>
       </div>
-      <div class="main-banner"></div>
+    </div>
+
+    <div class="main-banner">
+      <div class="notice">
+        <img src="./img/notice_ttl.png" alt="" />
+        <span>시스템 개선 및 점검 안내</span>
+        <span class="notice-more">
+          <a href="">더보기</a>
+        </span>
+      </div>
+      <div class="promotion">
+        <img src="./img/prom_ttl_b.png" alt="" />
+        <span class="notice-more">
+          <a href="">더보기</a>
+        </span>
+      </div>
+    </div>
+
+    <div class="rewards-bg">
+      <div class="rewards-container">
+        <div class="rewards-left">
+          <img src="./img/rewards-logo.png" alt="" />
+        </div>
+        <div class="rewards-right">
+          <h2 class="rewards-title">스타벅스만의 특별한 혜택, <strong>스타벅스 리워드</strong></h2>
+          <div class="rewards-content">
+            <p><strong>스타벅스 회원이세요?</strong> 로그인을 통해 나만의 키워드를 확인해보세요.<br /><strong>스타벅스 회원이 아니세요? </strong>가입을 통해 리워드 혜택을 즐기세요.</p>
+            <div>
+              <button class="btn join-btn">회원가입</button>
+              <button class="btn">로그인</button>
+            </div>
+          </div>
+          <hr />
+          <p>회원 가입 후, 스타벅스 e-Gift Card를 "나에게 선물하기"로 구매하시고, 편리하게 등록하세요! 카드를 등록하여 스타벅스 리워드 회원이 되신 후, 첫 구매를 하시면 무료 음료쿠폰을 드립니다!</p>
+          <button class="btn">e-Gift Card 선물하기</button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
