--- a/starbucks-clone/index.html
+++ b/starbucks-clone/index.html
@@ -82,7 +82,7 @@
     <div class="rewards-bg">
       <div class="rewards-container">
         <div class="rewards-left">
-          <img src="./img/rewards-logo.png" alt="" />
+          <img class="rewards-logo" src="./img/rewards-logo.png" alt="" />
         </div>
         <div class="rewards-right">
           <h2 class="rewards-title">스타벅스만의 특별한 혜택, <strong>스타벅스 리워드</strong></h2>
@@ -94,8 +94,10 @@
             </div>
           </div>
           <hr />
-          <p>회원 가입 후, 스타벅스 e-Gift Card를 "나에게 선물하기"로 구매하시고, 편리하게 등록하세요! 카드를 등록하여 스타벅스 리워드 회원이 되신 후, 첫 구매를 하시면 무료 음료쿠폰을 드립니다!</p>
-          <button class="btn">e-Gift Card 선물하기</button>
+          <div class="rewards-btm">
+            <p>회원 가입 후, 스타벅스 e-Gift Card를 <strong>"나에게 선물하기"로 구매하시고, 편리하게 등록하세요!</strong> <br />카드를 등록하여 스타벅스 리워드 회원이 되신 후, 첫 구매를 하시면 무료 음료쿠폰을 드립니다!</p>
+            <button class="btn">e-Gift Card 선물하기</button>
+          </div>
         </div>
       </div>
     </div>
